--- a/VRChat/17/1359517.html
+++ b/VRChat/17/1359517.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "nIxW8TijOGaQ1RVx77e8V4LlZ7Crd5m9jkJCpHrzpBw="></script>
+    "Ybp5konos920/JcRO/StLzifBwVt/kAjY9/wNn9tWhY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"隊長呆然顔アクリルキーホルダー","description":"この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。\n\nTwitterで好評連載中！VRChat体験記漫画の隊長のアクリルキーホルダー第三弾は呆然とした姿である！リアクションすら許されない衝撃に身を委ねるのだ！\n\nVRChat体験記（漫画）↓\nhttps://twitter.com/rietzscha/status/1085751861376737280","url":"https://booth.pm/ja/items/1359517","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1090"},"image":"https://booth.pximg.net/c/620x620/5aa4ad1f-09ca-4316-86f9-8caea276a4ba/i/1359517/20704e76-c82f-428e-a385-c61f609b1d73_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nIxW8TijOGaQ1RVx77e8V4LlZ7Crd5m9jkJCpHrzpBw="></script>
+    nonce="Ybp5konos920/JcRO/StLzifBwVt/kAjY9/wNn9tWhY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -386,9 +386,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
