--- a/VRChat/74/1359374.html
+++ b/VRChat/74/1359374.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "0U8GCgE8bcBCn+nDbWgCPWJEd9L7Q8gXPpRSzTNFxSs="></script>
+    "wTHFTQdJDLQb6KNJfRcay0pI2Zmx340hnC4eeoIEXz0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料版有り/#VRoid】VRoid向け瞳テクスチャ「いつかのお菓子」","description":"主にVRoidで使用することを想定した瞳テクスチャ 4色です。\nVRoid Studioにて瞳のレイヤーにインポートすることで使用することができます。\n\n2枚目はVRoid Studio内で撮影された使用例となります。\n\n※無料版は1枚のpng\n支援版は4種類のpng＆PSDファイルがあります","url":"https://booth.pm/ja/items/1359374","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2f3e8cbe-432b-4410-9421-398d8e66a5a8/i/1359374/3b34518d-e03f-4d88-9d45-f506d7a6f2ba_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0U8GCgE8bcBCn+nDbWgCPWJEd9L7Q8gXPpRSzTNFxSs="></script>
+    nonce="wTHFTQdJDLQb6KNJfRcay0pI2Zmx340hnC4eeoIEXz0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -508,9 +508,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
