--- a/VRChat/17/1358017.html
+++ b/VRChat/17/1358017.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "+Ton1SnvrZkN1w6Jb+LgxGQ9tY6hgz8/USjYShCjOAA="></script>
+    "gyVTpZTle+0f81KPlHPy81sctVzZnQ4Hc2LzVaIdk5I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"板刃刀-Conceil","description":"おはようございます。さぎりです。\nドシンプルな武器って結構惹かれるものがありますよね。うんうんわかります、私もそうですからね。シンプルすぎるほどまでに直線的なフォルム！剛性のよさそうな形状！いいですね！好きです。\nそんなわけでご用意しました。半分自分のために作ったものなんですけどね！\n\n前回と前々回に意見をいただきました。大事なことを先に書いておくべきでは？と。真っ当な意見ですありがとうございます。というわけで大事なことを書かせていただきましょう！\n\n-大事な事-\n・このモデル買ったら宗教に関わりそうなやばみのある事と他人を不快にさせること以外ならなんでも使っちゃっていいよ！性的なことも大ありだと思います。\n・二次配布したらさぎりがポテト食べれなくなるのでやめてくれ～！\n・今回はarktoonシェーダー(https://booth.pm/ja/items/1027997)を使用させていただいています。圧倒的感謝！\n\nこれくらい！毎度毎度シェーダーをお貸しいただいてる作者様には感謝が足りない！\n\nというわけでモノの説明をさせていただきますと、すんごいシンプルなフォルムを突き詰め、地味すぎないように頑張ってみた武器…みたいな感じですね。そうだ、暗所で一部が光ったらかっこいいんじゃない？やるしかない！Emissionを使って今まで見たいなマテリアル二種使うなんて言う原始的なのはやめだ！というわけでマテリアル数が従来の品物の2種以上から1種に別に減ってませんごめんなさい今回も2種使ってます。表現の都合上仕方ないねと許してください。\nところでこのコンセール。生身の人間が持ってもいいと思うんですけどロボ系のアバターさんが持っても違和感があんまりない気がします。若干グリップが細い気がしますがそこは…その…Cubeで増圧しよう！\n例のごとく今回もpsdが入っています。UV展開が今回もひどい有様です。やばみ！細かい模様入れなんてできたもんじゃありません。ちゅらいね。流石に三角ビットを1つに統合するとあとで部位ごとに色変えたくなった時に不便かなぁ…って…そういう裏話があります。\n\nReadmeなどの文章も極めてシンプルにしてあります。長い！というご意見が絶えなかったものを反映したものです。すまねぇ。\n\nというわけで今日はここまで！内容物はテクスチャ3種(UVとエミッション用と普通の)とunityパッケージとReadme！とpsd！何か不具合があったりこれはおかしいんと違うの？ということがあったらご連絡いただければと思います！","url":"https://booth.pm/ja/items/1358017","offers":{"priceCurrency":"JPY","@type":"Offer","price":"269"},"image":"https://booth.pximg.net/c/620x620/cc7a5528-cef2-45ce-ba77-7bb2b5cb5eb6/i/1358017/a716dcae-23c5-441d-9abd-8648ebaa9128_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+Ton1SnvrZkN1w6Jb+LgxGQ9tY6hgz8/USjYShCjOAA="></script>
+    nonce="gyVTpZTle+0f81KPlHPy81sctVzZnQ4Hc2LzVaIdk5I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -428,9 +428,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
