--- a/VRChat/87/1357587.html
+++ b/VRChat/87/1357587.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "A7WQD5jK2WJu89iNogd5HjKiCyTVi1eImX7DgHY26IM="></script>
+    "0M/hsUyDMZDpTXLnFDt+PzGHMxpy43WcsDbl3hrW3DI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【#VRoid】【無償有】うさぎスクールコーデセット","description":"本品はunnun.というブランドが制服を手がけたら…？というコンセプトのもとアレンジされた、女性用制服のセットです。\n\nポイントは紺色の落ち着いたベストと靴下に刺繍されたunnun.のうさぎロゴ。\n公立っぽい親しみやすさと、私立のような特別感。\n様々な制服アレンジにお使いいただければ幸いです！\n\n●ご支援版には1枚めの画像に使用しているチェックの背景が付いてきます。\n着用モデルはこちら\n‪https://hub.vroid.com/characters/3603050839015391181/models/2817980265193239481‬\n\n【添付ファイル】\n▼衣装テクスチャ\n・layer_accessory_ribbon.png\n・layer_body_best.png\n・layer_body_skirts.png\nベースの制服(半袖)に対応しているテクスチャです。紺色と赤色のチェックが目立ちます。\nそれぞれリボン、ベスト、スカートにテクスチャを貼り付けてお使いください。\n\n▼肌テクスチャ\n・layer_body_sox.png\nうさぎロゴの刺繍がかわいい、白ソックスです。\nローファーに合わせてもスニーカーに合わせてもキュートです。\n肌レイヤーに重ねてお使いください。\n\n\n【利用に関して】\n・動画配信時の衣装として着たり、VRChat、cluster、VRoid Hubへの投稿\n 各種VRM対応サービスへのおでかけなど、ご自由にお使いください。\n・この衣装を着たモデルの商用利用は可能です。\n・使用時の報告やクレジットは不要です。\n・ハッシュタグ#unnun をつけたツイートや\n ツイッターアカウント(@moucou)へのリプライをいただけると、今後の励みになります！\n・改変および再配布、販売は禁止しております。","url":"https://booth.pm/ja/items/1357587","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/2f22ec23-4d27-4849-8531-81e2965bdbb4/i/1357587/29cd1aa1-bc5e-4def-a6ee-bf43efbbd895_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="A7WQD5jK2WJu89iNogd5HjKiCyTVi1eImX7DgHY26IM="></script>
+    nonce="0M/hsUyDMZDpTXLnFDt+PzGHMxpy43WcsDbl3hrW3DI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -562,9 +562,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
