--- a/VRChat/98/1357598.html
+++ b/VRChat/98/1357598.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ofIKghAXGr4SJZZlbG3GxcM5BCdlUg5fnnQ7E/lCGe4="></script>
+    "BEzFr/kyYtp24YTSSAKEqRMkzZ0h/D+gi5yvgokSdzU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用アバター「シガードラゴン」ジャイアント版、SD版、シャドウ版【オリジナル3Dモデル】","description":"VRChatでの使用を想定した二足歩行のドラゴンのアバターです。\nキャラクターデザイン：趣さん（Twitter：https://twitter.com/EleganceKisetsu）\n\nジャイアント版：身長１０ｍ程度のアバターで、両手に椅子判定を３個ずつ埋め込んであるので他の人に座ってもらうことができます。\nSD版：小さいアバターを使いたい人用\nシャドウ版：ロックンロールのハンドサインで姿を消して影だけになれます。AFK時や写真撮影の邪魔になりたくない時、またはアイテムを持った時に手に埋もれてしまって見辛くて困ったときに便利です。\n\n・改変可\n・ペデスタル設置やpublic設定やアバタークローン許可設定や再配布等をしたい場合は私に相談してください。\n・フルトラ対応\n・それぞれ8000ポリゴン程度\n・リップシンク対応（シェイプキー名はMMD準拠）\n・瞬きやいくつかの表情差分あり\n・ジャイアント版、SD版は尻尾や翼を揺らすには別途ダイナミックボーンを購入してシーンを読み込む前にインポートしておいてください\n・シャドウ版はダイナミックボーンは必要ありませんが、jointで揺れるようにしてあるので特定のゲームワールドでは破綻しますのでご了承ください。\n・UnityやVRChatのバージョン更新により動作しなくなる可能性もありますのでご了承ください。\n・また、特定のワールドでは正常に動作しない場合がありますのでご了承ください。\n・その他質問等があれば私のTwitterアカウントに連絡してください。","url":"https://booth.pm/ja/items/1357598","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/9e8313ff-66da-4565-a550-3c52fa584cb9/i/1357598/847a1d58-a2fd-4fcd-b485-82f41147b328_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ofIKghAXGr4SJZZlbG3GxcM5BCdlUg5fnnQ7E/lCGe4="></script>
+    nonce="BEzFr/kyYtp24YTSSAKEqRMkzZ0h/D+gi5yvgokSdzU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -607,9 +607,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
