--- a/VRChat/59/1355359.html
+++ b/VRChat/59/1355359.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "eeQ+qTVQQg5OPuKDDiXGb2u4dGzUSm8S6HEpmBId2uM="></script>
+    "Tji7xsCzotgwCnwXzy4QMw3ZAZ65GHxJeryyRMNgbVU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"猫型ジャックオランタン（VRChat想定）","description":"猫型ジャックオランタンの3Dモデルです。\nこちらのモデルはVRChatでの使用を想定して作っていますが、禁止事項を守って頂ければVRChat以外でもご自由にご利用ください。\n\n\n内容物\n・Jack O Lantern.fbx（本体）\n・Jack O Lantern.png（テクスチャ）\n・Jack O Lantern UV.png（UV図）\n・ジャックオランタンUV説明図.png（テクスチャの簡単な説明）\n\n\n使用方法\nUnityでJack O Lantern.fbxを配置し、Jack O Lantern.pngをドラッグアンドドロップでモデルへ適用してください。\n\n\n禁止事項\n再配布（ゲームへの組み込み・VRCのペデスタル等はOK）\n政治的・宗教的・差別的な用途への利用","url":"https://booth.pm/ja/items/1355359","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4dfbeda-de4a-441b-ace4-484612b68061/i/1355359/cec7be1d-334e-43ff-a529-8738ed51c298_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eeQ+qTVQQg5OPuKDDiXGb2u4dGzUSm8S6HEpmBId2uM="></script>
+    nonce="Tji7xsCzotgwCnwXzy4QMw3ZAZ65GHxJeryyRMNgbVU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -405,9 +405,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
