--- a/VRChat/92/1353992.html
+++ b/VRChat/92/1353992.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "UWVCUqSYASn51fSnaHO9kwH0SngM8kzbdPt2lCI6d5k="></script>
+    "r0uuQOogDt919GfGXcjNfcJaB7mTUsdIpD4NEcBN/+Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【サポート終了】竹流式オリジナル3Dモデル「デイヴィッド」","description":"　●　同梱物一覧　●\n\n・FBXデータ2個（素体込みフルセットFBX、素体干渉部削除済みFBX）\n・テクスチャ11枚（skin2種、alpha、kami、Bottom3種、Jacket2種、Swallowtail2種）\n・改変用psdファイル6個\n・Unitypackage\n・資料画像3枚\n・利用規約txt（本文）\n\n\n　●　仕様　●\n\nボーン構成：UnityのHumanoid規則に沿っています\nフルトラッキング：対応しています\nアイトラッキング：対応しています\n\n\n　★　テクスチャ改変・カスタマイズについて　★\n\n本モデルはユーザー側でお好みのパーツをチョイスし、カスタマイズした上でご利用いただけます。カスタマイズ方法に関しては同梱画像の資料1・資料2を参考にして下さい。\nまた、テクスチャのPSDファイルを同梱しているので、お好みの色調への変更・お好みの柄を貼り付けてのご利用が可能です。レイヤー名に従って基本色・影色を設定してあげて下さい。\nテクスチャの差し替えに関しては同梱画像の資料3をご参考ください。\n\n\n　★　シェーダーについて　★\n\n本モデルは服の裏面を作成しておりませんので、両面表示のシェーダーをご利用いただく必要があります。\n本モデルのUnitypackageで設定済みのシェーダーはユニティちゃんトゥーンシェーダー2.0.7.2です。\nDLもと：http://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\n\n　★　Unitypackageインポート前の準備　★\n\n本モデル同梱のUnitypackageをインポートする前に、以下のアセットやシェーダーをインポートしてください。\n・VRCSDK最新版\n・ユニティちゃんトゥーンシェーダー2.0（UTS2）\n・ダイナミックボーン（なくても構いませんが、使わない場合は燕尾服の燕尾部分が揺れません）\n\n2022/8/7　サポート終了宣言　ご購入後のサポートは今後行われません\n\n2019/9/19 　Vケット3開催記念衣装（チャイナ服、メガネ）の追加\n\n2019/5/7　リリース\n\n竹流\n空創緑林館　http://airgreen.net/\nTwitter　@airgreennet\npixiv　https://www.pixiv.net/member.php?id=39794","url":"https://booth.pm/ja/items/1353992","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/7dbcb1ac-257b-4189-ab1a-4aa38dcc29f7/i/1353992/e61c093e-4e55-4692-a831-2593941428a6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UWVCUqSYASn51fSnaHO9kwH0SngM8kzbdPt2lCI6d5k="></script>
+    nonce="r0uuQOogDt919GfGXcjNfcJaB7mTUsdIpD4NEcBN/+Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -534,9 +534,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
